# rustwav

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md
rustwav/: Cargo.toml
rustwav/src/: cli.rs  file_utils.rs  main.rs  metadata.rs
rustwav/src/sources/: spotify.rs
src/: cli.rs  converter.rs  db.rs  downloader.rs  error_log.rs  file_utils.rs  logger.rs  main.rs  metadata.rs
src/sources/: spotify.rs  youtube.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs  worker.rs
