cargo-features = ["resolver"]

[workspace]
resolver = "2"

[package]
name = "rustwav"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.41", features = ["full"] }
rspotify = "0.12"
dirs = "5.0"
anyhow = "1.0"
