[package]
name = "rustwav"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.41", features = ["full"] }
rspotify = "0.12"
futures = "0.3"
dirs = "5.0"
anyhow = "1.0"
id3 = "1.16.3"
metaflac = "0.2"
image = "0.25.9"
ratatui = "0.29"
crossterm = "0.28"
dotenvy = "0.15"
