[package]
name = "rustwav"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.40", features = ["full"] }
rspotify = "0.11"
dirs = "5.0"
anyhow = "1.0"
